# programmor-adapters

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test.py  tox.ini
.github/workflows/: packaging.yml  tests.yml
docs/source/: conf.py  index.rst
documentation/source/: conf.py  index.rst  shared_api.rst  shared_comm.rst  shared_datetime.rst  shared_endpoint.rst  shared_frame.rst  shared_rest_endpoint.rst  shared_socket_endpoint.rst  usb_usb.rst
lib/: VERSION.md
programmor_adapters/shared/: api.py  comm.py  comms_manager.py  datetime.py  endpoint.py  frame.py  interface.py  rest_endpoint.py  rest_namespace.py  socket_endpoint.py  socket_namespace.py  types.py
programmor_adapters/shared/proto/: transaction.proto  transaction_pb2.py
programmor_adapters/test_adapter/: __main__.py  main.py  test_comm.py  test_device.py  test_manager.py
programmor_adapters/test_adapter/proto/: test.proto  test_pb2.py
programmor_adapters/usb/: __main__.py  api.py  deleted_api.py  deleted_comms_handle.py  main.py  rest_endpoint.py  socket_endpoint.py  usb.py
programmor_adapters/usb_adapter/: __main__.py  helper.py  main.py  usb.py  usb_manager.py
tests/: test_shared_interface.py
tests_benchmark/: usb_throughput.py
tests_e2e/: README.md
tests_e2e/hmi_gui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
tests_e2e/hmi_gui/src/: App.vue  hmi.json  main.ts
tests_e2e/hmi_gui/src/assets/: main.css  main.scss
tests_e2e/hmi_gui/src/proto/: test.proto  transaction.proto
tests_e2e/teensy_firmware/: README.md  platformio.ini
tests_e2e/teensy_firmware/proto/: transaction.options
tests_e2e/teensy_firmware/protobuf/: .gitignore  transaction.options  transaction.proto
tests_e2e/teensy_firmware/src/: main.cpp  main.h
(+11 files in other folders)
