[metadata]
name = programmor-adapters
version = 0.1.0
description = An open source tuning software communication adapters
author = David Cedar
license = GPL-2.0
license_files = LICENSE
platforms = linux, osx, win32
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = programmor_adapters
packages =
    usb
install_requires =
    protobuf>=3.19.4
    protoc-wheel-0>=3.19.4
    hid>=1.0.5
python_requires = >=3.11
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.24.5
    autopep8>=1.6.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
exclude = .git,__pychache__,docs,proto, lib, include